selfhost/test/typechecker/import/error_duplicate_type_name.1.abra
import Foo from "./_exports"

val Foo = "foo"
